--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cron": "^2.1.0",
+    "node-fetch": "^3.2.10",
     "twitter-api-v2": "^1.12.7"
   },
   "name": "tuvequecomprarono",
